Cleaned code, fixed the max-width of the image so that it won't overflow when the screen is smaller

--- a/scss/_section-details-content.scss
+++ b/scss/_section-details-content.scss
@@ -4,6 +4,12 @@
   padding-top: 31px;
 }
 
+.details_content-figure,
+.image_list,
+.photo_information-list {
+  display: grid;
+}
+
 // Put the arrow on the text
 .details_content-breadcrumb {
   position: relative;
@@ -36,29 +42,22 @@
 
 // Styling the figure and the images in it
 .details_content-figure {
-  display: grid;
-  grid-gap: 9px;
+  grid-gap: 10px;
   padding-top: calc(82px - 32px);
   padding-bottom: calc(92px - 32px);
-  overflow: auto;
-  grid-auto-columns: min-content;
-}
-
-.active-picture {
-  grid-column: 1/9;
 }
 
 .image-active,
 .details_content-figure-picture {
-  max-width: 346px;
+  max-width: 100%;
   max-height: 215px;
 }
 
-// .image-active,
-// .details_content-figure-picture {
-//   max-width: 274px;
-//   max-height: 170px;
-// }
+.image_list {
+    grid-gap: 10.5px;
+    grid-template-columns: repeat(9, 1fr);
+    overflow: hidden;
+}
 
 .small-image,
 .image-active {
@@ -76,7 +75,6 @@
 
 // Information about the images.
 .photo_information-list {
-  display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 40px;
 }
@@ -161,13 +159,16 @@
   .details_content-figure {
     grid-column: 1/3;
     max-width: 1170px;
-    overflow: visible;
   }
 
   .image-active,
   .details_content-figure-picture {
     max-width: 1170px;
     max-height: 728px;
+  }
+
+  .image_list {
+    overflow: visible;
   }
 
   .photo_information-list {
