--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -203,6 +203,11 @@ body > [type="checkbox"]:checked ~ header .menu {
 .section_details-content {
   padding-top: 31px; }
 
+.details_content-figure,
+.image_list,
+.photo_information-list {
+  display: grid; }
+
 .details_content-breadcrumb {
   position: relative; }
 
@@ -227,20 +232,19 @@ body > [type="checkbox"]:checked ~ header .menu {
   font-size: 18px; }
 
 .details_content-figure {
-  display: grid;
-  grid-gap: 9px;
+  grid-gap: 10px;
   padding-top: calc(82px - 32px);
-  padding-bottom: calc(92px - 32px);
-  overflow: auto;
-  grid-auto-columns: min-content; }
-
-.active-picture {
-  grid-column: 1/9; }
+  padding-bottom: calc(92px - 32px); }
 
 .image-active,
 .details_content-figure-picture {
-  max-width: 346px;
+  max-width: 100%;
   max-height: 215px; }
+
+.image_list {
+  grid-gap: 10.5px;
+  grid-template-columns: repeat(9, 1fr);
+  overflow: hidden; }
 
 .small-image,
 .image-active {
@@ -254,7 +258,6 @@ body > [type="checkbox"]:checked ~ header .menu {
   opacity: 0.5; }
 
 .photo_information-list {
-  display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 40px; }
 
@@ -309,12 +312,13 @@ body > [type="checkbox"]:checked ~ header .menu {
     padding-bottom: 55px; }
   .details_content-figure {
     grid-column: 1/3;
-    max-width: 1170px;
-    overflow: visible; }
+    max-width: 1170px; }
   .image-active,
   .details_content-figure-picture {
     max-width: 1170px;
     max-height: 728px; }
+  .image_list {
+    overflow: visible; }
   .photo_information-list {
     max-width: 443px;
     max-height: 152px;
